<resources>
  <string name="app_name">MySalesplatform</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="tab_menu_item_label_home">Home</string>
  <string name="tab_menu_item_label_customer">Customer</string>
  <string name="tab_menu_item_label_quotation">Quotation</string>
  <string name="tab_menu_item_label_fna">FNA</string>
  <string name="tab_menu_item_label_policy">Policy</string>

<!-- TODO: Remove or change this placeholder text -->
  <string name="quotation_trial">Trial</string>
  <string name="quotation_proposal">Proposal</string>
  <string name="quotation_product">Product: </string>
  <string name="quotation_eidt_product">Edit product</string>
  <string name="quotation_policy_holder_name">Name: </string>
  <string name="quotation_eidt_policy_holder_name">Edit name</string>

<!-- TODO: Remove or change this placeholder text -->
  <string name="home_title">Blank home fragment</string>
  <string name="customer_title">Blank customer fragment</string>
  <string name="fna_title">Blank FNA fragment</string>
  <string name="policy_title">Blank policy fragment</string>
</resources>
