<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ebao.ls.mysalesplatform.quotaton.QuotationTrialFragment">

  <RelativeLayout
      android:id="@+id/sp_top_bar"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:background="@color/dark_blue">

    <TextView
        android:id="@+id/txt_topbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/topbar_color"
        android:text="@string/quotation_trial"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>

  </RelativeLayout>
  <!-- TODO: Update blank fragment layout -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quotation_product"
        />
    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/quotation_eidt_product" />
  </LinearLayout>

</LinearLayout>
